--- a/server/.env
+++ b/server/.env
@@ -4,6 +4,7 @@ DB_PASSWORD=P455W0rD@2--1
 DB_HOST=localhost
 DB_DATABASE=alkemyDB1
 DB_DIALECT=mysql
+PORT=3005
 
 # Auth Config
 AUTH_SECRET=*Ak%*c$f^M#fgXb$9Rs8L
